cd2024bfs4g1-frontend/src/main/ngx/src/app/main/tutors/tutors-new/tutors-new.component.css
* { font-family: 'Roboto', sans-serif; }

.grid-container{
  width: 96%;
  margin: 5px auto;
  background-color: #f5f0f2;
  border-radius: 15px;
  padding: 20px;
  height: auto;
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: auto auto;
  gap: 10px;
  height: auto;
}
.datos {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
  grid-column: 1/3;
}
fieldset {
  border-radius: 15px;
  padding: 20px;
  background-color: #f5f0f2;
  border: solid 1px #ccc;
  border-radius: 15px;
  border: solid 1px;
  padding-left: 20px;
  padding-right: 20px
}


.nombre {
  grid-column: 1/ 1;
}

.apellido {
  grid-column: 2 / 2;
}

.apellido2 {
  grid-column: 1 / 2;
}

.email{
  grid-column: 2/2;
}

o-form {
  width: 100%;
  height: 100%;
  margin: 0 auto;
}
label {
  display: block;
  width: 100%;
  margin: 10px 0 10px 10px;
  font-size: 16px;
  font-weight: bold;
  box-sizing: border-box;
}

.foto {
  grid-column: 1 / 3;  /* Define la columna */
  grid-row: 0;  /* Asegúrate de que esté en la fila 1 */
  justify-self: center;  /* Centra horizontalmente */
  align-self: center;  /* Centra verticalmente */
  margin-bottom: 40px;
}

.p_info_foto{
  margin-top: 30px;
  font-size: 12px;
}

@media (max-width: 1250px) {

  .grid-container {
    width: 90%;
    padding: 15px;
    grid-template-columns: 1fr 1fr;
  }

  
}

